force-app/main/default/objects/Facture__c/Facture__c.object-meta.xml
<CustomObject>
    <description>Standard invoice source object for the pennylane-dev Facturation invoice route.</description>
    <label>Facture</label>
    <nameField>
        <displayFormat>FAC-{00000}</displayFormat>
        <label>Numéro de facture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>