force-app/main/default/objects/Facture__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factures TB2SI</relationshipLabel>
    <relationshipName>Factures_TB2SI</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>