force-app/main/default/objects/Facture__c/fields/Date_echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_echeance__c</fullName>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>