force-app/main/default/objects/Facture__c/fields/Date_facture__c.field-meta.xml
<CustomField>
    <fullName>Date_facture__c</fullName>
    <label>Date facture</label>
    <type>Date</type>
</CustomField>