force-app/main/default/objects/Facture__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Étape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Envoyée à Pennylane</fullName>
            </value>
            <value>
                <fullName>Finalisée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>