force-app/main/default/objects/Facture__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Factures TB2SI</relationshipLabel>
    <relationshipName>Factures_TB2SI</relationshipName>
    <type>Lookup</type>
</CustomField>