force-app/main/default/objects/Facture__c/fields/Protected_PDF_Error__c.field-meta.xml
<CustomField>
    <fullName>Protected_PDF_Error__c</fullName>
    <label>PDF protégé - erreur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>