force-app/main/default/objects/Facture__c/fields/Protected_PDF_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Protected_PDF_File_Id__c</fullName>
    <label>PDF protégé - fichier Salesforce</label>
    <length>18</length>
    <type>Text</type>
</CustomField>