force-app/main/default/objects/Facture__c/fields/Protected_PDF_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Protected_PDF_Generated_At__c</fullName>
    <label>PDF protégé - généré le</label>
    <type>DateTime</type>
</CustomField>