force-app/main/default/objects/Facture__c/fields/Protected_PDF_Status__c.field-meta.xml
<CustomField>
    <fullName>Protected_PDF_Status__c</fullName>
    <label>PDF protégé - statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>NotStarted</fullName><default>true</default><label>Non démarré</label></value>
            <value><fullName>Queued</fullName><default>false</default><label>En file</label></value>
            <value><fullName>Processing</fullName><default>false</default><label>En traitement</label></value>
            <value><fullName>Succeeded</fullName><default>false</default><label>Réussi</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Échec</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>