force-app/main/default/objects/Facture__c/fields/TB2SI_Facturation_Pennylane_Id__c.field-meta.xml
<CustomField>
    <fullName>TB2SI_Facturation_Pennylane_Id__c</fullName>
    <label>Pennylane Invoice ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>