force-app/main/default/objects/Facture__c/fields/TB2SI_Facturation_Pennylane_Number__c.field-meta.xml
<CustomField>
    <fullName>TB2SI_Facturation_Pennylane_Number__c</fullName>
    <label>Pennylane Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>