force-app/main/default/objects/Facture__c/fields/TB2SI_Facturation_Pennylane_Status__c.field-meta.xml
<CustomField>
    <fullName>TB2SI_Facturation_Pennylane_Status__c</fullName>
    <label>Statut Pennylane</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>upcoming</fullName>
            </value>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>late</fullName>
            </value>
            <value>
                <fullName>partially_paid</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>partially_cancelled</fullName>
            </value>
            <value>
                <fullName>credit_note</fullName>
            </value>
            <value>
                <fullName>archived</fullName>
            </value>
            <value>
                <fullName>finalized</fullName>
            </value>
            <value>
                <fullName>finalised</fullName>
            </value>
            <value>
                <fullName>issued</fullName>
            </value>
            <value>
                <fullName>validated</fullName>
            </value>
            <value>
                <fullName>settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>